[package]
name = "gtunnel"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/cssivision/gtunnel"
homepage = "https://github.com/cssivision/gtunnel"
description = "tcp over grpc proxy."
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9"
tonic = "0.6"
tokio = { version = "1", features = ["full"] }
h2 = "0.3"
tokio-rustls = "0.22"
serde = "1.0"
log = "0.4"
env_logger = "0.8"
getopts = "0.2"
serde_derive = "1.0"
serde_json = "1.0"
futures-util = { version = "0.3", default-features = false }

[build-dependencies]
tonic-build = "0.6"